# GraphicCalculator

./: .gitignore  report.tex
graphicCalculator/: CMakeLists.txt  main.cpp
graphicCalculator/src/: MainWindow.cpp  MainWindow.h
graphicCalculator/src/parser/: AstNode.h  Evaluator.cpp  Evaluator.h  Parser.cpp  Parser.h  Token.h  Tokenizer.cpp  Tokenizer.h
graphicCalculator/src/widgets/: GraphWidget.cpp  GraphWidget.h  InputField.cpp  InputField.h  KeyboardWidget.cpp  KeyboardWidget.h  SettingsPanel.cpp  SettingsPanel.h
